--- a/grid/sass/main.scss
+++ b/grid/sass/main.scss
@@ -1,5 +1,41 @@
 $ancho-grid: 90rem;
 $espacio-cols: 3rem;
+$espacio-fila: 1rem;
+
+/* 
+    600px  telefonos
+    900px tablets portrait (Verticales)
+    1200px tablets landscape (Horizontales)
+    1800px escritorio
+
+    @include respond(tablet){        
+        font-size: 4rem;
+    }
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == telefono {
+        @media only screen and (max-width: 600px) {
+            @content;
+        }
+    }
+    @if $breakpoint == tab-port {
+        @media only screen and (max-width: 900px) {
+            @content;
+        }
+    }
+    @if $breakpoint == tab-land {
+        @media only screen and (max-width: 1200px) {
+            @content;
+        }        
+    }
+    @if $breakpoint == escritorio  {
+        @media only screen and (max-width: 1800px) {
+            @content;
+        }
+    }
+
+}
 
 @mixin clearfix {
     &::after {
@@ -28,23 +64,63 @@ p {
 .fila {
     max-width: $ancho-grid;
     margin: 0 auto;    
+    margin-bottom: $espacio-fila;
 
     border: 1px solid black;
 
     @include clearfix;
+
+    @include respond(tab-port) {
+        max-width: 70rem;
+    }
+
+    @include respond(telefono) {
+        max-width: 50rem;
+    }
 }
 [class^="col-"]{
     float: left;
+    height: 2rem;
+    text-align: center;
+
+    font-size: 1.5rem;
     border: 0.1rem solid #2e2e2e;
     background-color: #2e85d1cc;
     color: whitesmoke;
+
     &:not(:last-child) {
         margin-right: $espacio-cols;
+        @include respond(telefono) {
+            margin-bottom: 1rem;
+        }
+    }
+
+    @include respond(telefono) {
+        width: 100% !important;       
     }
 }
 .col-1-de-2 {
     width: calc((100% - #{$espacio-cols}) /2);    
 }
 .col-1-de-3 {
+   
     width: calc((100% - 2 * #{$espacio-cols})/3);
 }
+.col-2-de-3 {
+    width: calc(2 * (100% - 2 * #{$espacio-cols})/3 + #{$espacio-cols});
+}
+
+.col-1-de-4 {
+     
+    width: calc((100% - 3 * #{$espacio-cols})/4);
+}
+
+.col-2-de-4 {
+    width: calc(2 * (100% - 3 * #{$espacio-cols})/4 + #{$espacio-cols});
+}
+.col-3-de-4 {
+    width: calc(3 * (100% - 3 * #{$espacio-cols})/4 + 2 * #{$espacio-cols});
+}
+
+
+
